= 2.1.20120919 = * Updated the http_build_query() method that outputs the dimensions for iframe and RESS decks, added the ampersand as the separator. Some users were having the html encoded '&amp;' being output which was breaking the deck dimensions. * Namespaced the SlideDeck SimpleModal JavaScript library further to avoid namespace conflicts with plugins like Shortcode Exec PHP and Ajax Event Calendar * Fixed bug with IE 8 background image processing that was preventing images beyond the first slide from working in vertical SlideDecks. * Fixed a display issue where the SlideDeck previews on the manage page where sometimes rendered at the wrong height. * Fixed an issue where SlideDecks using the iframe=1 shortcode option had a larger than necessary height. * Reporter Lens: Including multiple Reporter decks on the page no longer creates JavaScript errors and broken decks. * Reporter Lens: Fixed an issue where the video thumbnail was erroneously linking to the video permalink when this was not expected. * Updated language files to include phrases used in lens templates such as "Read More". * Fixed an issue where the video cover was not always hidden when automatically advnacing to the next slide. * Updated language files to include phrases used in lens templates such as "Read More".
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@601188 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lenses/reporter/lens.css
+++ b/lenses/reporter/lens.css
@@ -276,6 +276,9 @@
 .lens-reporter dl.slidedeck .slide-type-video .image .play-video-alternative:active .play-icon {
 	top: 1px;
 }
+.lens-reporter dl.slidedeck .slide-type-video a.sd2-image-link {
+    cursor: default;
+}
 
 
 /* End video stuff */
