--- a/lenses/tool-kit/lens.css
+++ b/lenses/tool-kit/lens.css
@@ -227,7 +227,7 @@ Tags: images, posts, feeds, pages, slidedeck
 }
 .lens-tool-kit.sd2-small.sd2-no-nav .sd-nav-wrapper,
 .lens-tool-kit.sd2-medium.sd2-no-nav .sd-nav-wrapper,
-.lens-tool-kit.sd2-large.sd2-no-nav .sd-nav-wrapperm,
+.lens-tool-kit.sd2-large.sd2-no-nav .sd-nav-wrapper,
 .lens-tool-kit.sd2-custom.sd2-no-nav .sd-nav-wrapper { padding-bottom: 0px; }
 .lens-tool-kit.sd2-nav-bar.sd2-small.sd2-nav-thumb.sd2-frame.sd2-nav-bar .sd-nav-wrapper {
     height: 41px;
