* Fixed an error where upgrading from Lite would show an error page if FTP crendentials were requested * Fixed an issue where a warning was being thrown due to a lack of a `$found_lens_path` * Updated URL pathing constant to use plugins_url() for better WordPress Network compatibility * Updating the slidedeck_dimensions() filter for PHP 5.4 compatibility * Added Title, Before, and After text to the SlideDeck WordPress Widget * Tool Kit Lens: Fixed an issue where the excerpt block could show up even if there was no excerpt.
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@610428 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lenses/tool-kit/lens.css
+++ b/lenses/tool-kit/lens.css
@@ -567,6 +567,10 @@ Tags: images, posts, feeds, pages, slidedeck
     -moz-hyphens: auto;
     hyphens: auto;
 }
+/* Turn off excerpt if the excerpt is the only thing visible and we are on an excerpt-less slide */
+.lens-tool-kit.sd2-show-excerpt dd.no-excerpt .sd-node-title-box { display: none; }
+
+/* Turn on the excerpt if  */
 .lens-tool-kit.sd2-show-title .sd-node-title-box,
 .lens-tool-kit.sd2-show-title .sd-node-title-box .slide-title,
 .lens-tool-kit.sd2-show-author .sd-node-title-box,
@@ -576,6 +580,17 @@ Tags: images, posts, feeds, pages, slidedeck
 .lens-tool-kit.date-format-human-readable-abbreviated .sd-node-title-box,
 .lens-tool-kit.date-format-human-readable-raw .sd-node-title-box,
 .lens-tool-kit.date-format-human-readable-raw-eu .sd-node-title-box,
+
+.lens-tool-kit.sd2-show-title dd.no-excerpt .sd-node-title-box,
+.lens-tool-kit.sd2-show-title dd.no-excerpt .sd-node-title-box .slide-title,
+.lens-tool-kit.sd2-show-author dd.no-excerpt .sd-node-title-box,
+.lens-tool-kit.sd2-show-author-avatar dd.no-excerpt .sd-node-title-box,
+.lens-tool-kit.date-format-timeago dd.no-excerpt .sd-node-title-box,
+.lens-tool-kit.date-format-human-readable dd.no-excerpt .sd-node-title-box,
+.lens-tool-kit.date-format-human-readable-abbreviated dd.no-excerpt .sd-node-title-box,
+.lens-tool-kit.date-format-human-readable-raw dd.no-excerpt .sd-node-title-box,
+.lens-tool-kit.date-format-human-readable-raw-eu dd.no-excerpt .sd-node-title-box,
+
 .lens-tool-kit.sd2-show-excerpt .sd-node-title-box,
 .lens-tool-kit.sd2-show-excerpt .sd-node-title-box .slide-text { display: block; }
 
