--- a/css/slidedeck-admin-lite.css
+++ b/css/slidedeck-admin-lite.css
@@ -110,187 +110,8 @@ along with SlideDeck.  If not, see <http://www.gnu.org/licenses/>.
 }
 /* End of Additional Sources Upsell */
 
-/* Upsell Modals */
-#slidedeck-upsell-simplemodal {
-	background: none;
-	border: none;
-	width: 524px;
-	margin-left: -262px;
-}
-#slidedeck-upsell-simplemodal.for-lenses {
-	width: 664px;
-	margin-left: -332px;
-}
-#slidedeck-upsell-simplemodal img#covers-modal-upsell{
-	display: block;
-	margin-left: -25px;
-	margin-bottom: 20px;
-}
-#slidedeck-upsell-simplemodal .slidedeck-header h1 {
-	background: none;
-	padding: 0;
-	text-align: center;
-}
-#slidedeck-upsell-simplemodal .background {
-	overflow: hidden;
-	background: #f2f2f2;
-	border: solid 1px #d1d1d1;
-	padding: 24px 16px 36px;
-	margin: 0 1px;
-	-webkit-border-bottom-right-radius: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-	-moz-border-radius-bottomright: 5px;
-	-moz-border-radius-bottomleft: 5px;
-	border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;
-}
-#slidedeck-upsell-simplemodal .background .inner{
-	background: #fff;
-	border: solid 1px #d0d0d0;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	padding: 25px 0;
-}
-#slidedeck-upsell-simplemodal .background .inner .copyblock{
-	padding: 0 25px;
-	overflow: hidden;
-}
-#slidedeck-upsell-simplemodal .background .inner .copyblock h3{
-	margin-top: 0;
-	font-size: 1.28em;
-}
-#slidedeck-upsell-simplemodal .background .inner .copyblock p{
-	font-size: 14px;
-}
-#slidedeck-upsell-simplemodal .background .cta {
-	text-align: center;
-}
-#slidedeck-upsell-simplemodal .background .cta .features-link {
-}
-#slidedeck-upsell-simplemodal .background .cta .slidedeck-noisy-button {
-	text-decoration: none;
-	display: block;
-	width: 240px;
-	margin: 0 auto 10px;
-	line-height: 46px;
-}
-#slidedeck-upsell-simplemodal .background .cta .slidedeck-noisy-button span {
-	box-shadow: 0 -6px 0px -2px rgba(0,0,0,0.3) inset;
-}
-#slidedeck-upsell-simplemodal .background .cta .slidedeck-noisy-button:active span {
-	box-shadow: 0 -5px 0px -2px rgba(0,0,0,0.3) inset;
-}
-#slidedeck-upsell-simplemodal .background .cta .slidedeck-noisy-button,
-#slidedeck-upsell-simplemodal .background .cta .slidedeck-noisy-button span {
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-}
-
-/* Additional Lenses */
-#slidedeck-section-lenses .lens.placeholder {
-	cursor: pointer;
-	text-decoration: none;
-	zoom: 1; /* Triggers has layout? */
-	filter: alpha(opacity=30);
-	opacity: 0.3;
-}
-/* Additional lenses in modal */
-#slidedeck-upsell-simplemodal.for-lenses .background .inner .copyblock{
-	margin-bottom: 40px;
-}
-#slidedeck-upsell-simplemodal .lens {
-	cursor: default;
-	text-decoration: none;
-    position: relative;
-    display: block;
-    float: left;
-    width: 112px;
-    min-height: 112px;
-    overflow: hidden;
-    padding: 8px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px;
-    border: 1px solid #FFFFFF;
-    margin-right: 14px;
-    margin-bottom: 0px;
-}
-#slidedeck-upsell-simplemodal .lens:first-child { margin-left: 0; }
-#slidedeck-upsell-simplemodal .lens .thumbnail {
-    position: relative;
-    display: block;
-    width: 104px;
-    height: 77px;
-    padding: 3px;
-    margin: 0 auto;
-    border: 1px solid #aeb8c6;
-    background: #FFFFFF;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px;
-    z-index: 2;
-}
-#slidedeck-upsell-simplemodal .lens .thumbnail img {
-    position: relative;
-    display: block;
-    overflow: hidden;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
-    max-width: 104px;
-    max-height: 78px;
-}
-#slidedeck-upsell-simplemodal .lens span.shadow {
-    display: block;
-    position: absolute;
-    top: 122px;
-    left: 50%;
-    margin-left: -87px;
-    width: 170px;
-    height: 10px;
-    background: url('../images/lens-thumbnail-shadow.png') center center no-repeat;
-    z-index: 1;
-}
-#slidedeck-upsell-simplemodal .lens .title {
-    display: block;
-    margin: 0;
-    text-align: center;
-    font: bold 14px/22px sans-serif;
-    color: #5a5d67;
-    padding-top: 6px;
-}
-#slidedeck-table .right #slidedeck-social-buttons {
-    border-bottom: none;
-    padding-bottom: 0;
-}
 #slidedeck-social-buttons .tweeet-button { padding: 17px 0 10px 0; }
 #slidedeck-social-buttons .like-button { height: 32px; }
-
-#slidedeck-section-lenses .lens.placeholder .has-subtitle.title,
-#slidedeck-upsell-simplemodal .lens.placeholder .has-subtitle.title {
-	margin-top: -0.5em;
-}
-#slidedeck-section-lenses .lens .subtitle {
-	color: #000;
-}
-
-.lens.placeholder .subtitle,
-#slidedeck-upsell-simplemodal .lens .subtitle {
-	margin: 0;
-	padding: 0;
-	font-size: 12px;
-	line-height: 13px;
-	text-align: center;
-	font-style: italic;
-	display: block;
-	margin-top: -3px;
-}
-
 /* 7 day discount upgrade */
 #discount-upgrade-notice {
     width: 978px;
@@ -424,4 +245,28 @@ along with SlideDeck.  If not, see <http://www.gnu.org/licenses/>.
     position: relative;
     top: -25px;
     padding-right: 37px;
+}
+
+#slidedeck-upsell-simplemodal.for-need-support {
+    width: 604px;
+    margin-left: -302px;
+}
+#support-team-list,
+#support-team-list li {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    text-align: center;
+}
+#support-team-list{
+    padding-top: 1.5em;
+    margin-bottom: 2.5em;
+}
+#support-team-list li {
+    display: inline-block;
+    width: 65px;
+    border: solid 1px #acb8c6;
+    border-radius: 3px;
+    padding: 4px;
+    margin: 0 3px;
 }
