* Updated pathing for Ress js asset loading for better consitency across the board * Adding a filter for the shortcode attributes. * Adjusting the way that a proportional RESS raito is calculated (Should help with height on some RESS decks). * Fixing a typo in the 'Overlays Always Open' tooltip. * Adding Flickr Group support to the Flickr source (recent only, no tags) * Adding image size choice to the WordPress Posts source. You can now choose auto or a specific registered size. * Addressing an issue where the manage screen may fail and dislay this error: `Cannot use object of type WP_Error as array` * Added Georgia to the default list of fonts.
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@625867 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slidedeck-admin.css
+++ b/css/slidedeck-admin.css
@@ -3476,6 +3476,18 @@ textarea#back_title {
     #slidedeck-types div.create-slidedeck div.slidedeck-inner p {
         font-size: 13px;
     }
+    #slidedeck-types div#create-custom-slidedeck div.slidedeck-inner {
+        background: url('../images/choose-custom-content-sml.png') 20px 20px no-repeat;
+    }
+    #slidedeck-types div#create-custom-slidedeck.professional div.slidedeck-inner {
+        background: url('../images/choose-custom-content-pro-sml.png') 20px 20px no-repeat;
+    }
+    #slidedeck-types div#create-custom-slidedeck.developer div.slidedeck-inner {
+        background: url('../images/choose-custom-content-dev-sml.png') 20px 20px no-repeat;
+    }
+    #slidedeck-types div#create-dynamic-slidedeck div.slidedeck-inner {
+        background: url('../images/choose-dynamic-decks-sml.png') 20px 20px no-repeat;
+    }
 }
 
 /* SlideDeck Advanced Options Styles*/
@@ -4245,7 +4257,27 @@ div.upgrade-button-cta .upgrade-button .button-noise span:after {
     background: url('../images/star-icon-white.png');
 }
 
+/* Add more lenses */
+#slidedeck-lenses div.lens.add-lens h4 {
+    font-size: 25px;
+    font-weight: bold;
+    color: #222;
+    padding: 10px 20px 5px;
+}
 
+#slidedeck-lenses div.lens.add-lens .inner > p {
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: bold;
+    color: #838383;
+    padding: 0 20px;
+    margin-bottom: 15px;
+}
+
+#slidedeck-lenses div.lens.add-lens div.upgrade-button-cta {
+    text-align: center;
+    margin-bottom: 0px;
+}
 
 
 
