= 2.1.20130219 = * Updating the version of plupload in anticipation of jQuery 1.9 * Removing all calls to jQuery.browser or $.browser in anticipation of jQuery 1.9 * Attempted a fix for the fullscreen images flashing issue * Addressing an issue where editing a lens could result in a broken page
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@670571 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slidedeck-admin-lite.css
+++ b/css/slidedeck-admin-lite.css
@@ -107,6 +107,7 @@ along with SlideDeck.  If not, see <http://www.gnu.org/licenses/>.
     font-size: 14px !important;
     line-height: 36px;
     padding: 0 25px;
+    height: 38px;
 }
 /* End of Additional Sources Upsell */
 
@@ -230,15 +231,25 @@ along with SlideDeck.  If not, see <http://www.gnu.org/licenses/>.
     margin-left: 0;
 }
 
+.slidedeck_installation-discount.wp-pointer .wp-pointer-content .more-info .wrapper {
+    overflow: hidden;
+    clear: both;
+    padding-bottom: 0.5em;
+}
+
 .slidedeck_installation-discount.wp-pointer .wp-pointer-content .more-info a.button.slidedeck-noisy-button {
     top: 25px;
     z-index: 1000;
+    clear: both;
+    display: inline-block;
+    height: 32px;
 }
 
 .slidedeck_installation-discount.wp-pointer .wp-pointer-content .more-info a.button.slidedeck-noisy-button span {
     height: 30px;
     padding: 0 20px;
     line-height: 30px;
+    position: relative;
 }
 
 .slidedeck_installation-discount.wp-pointer .wp-pointer-buttons {
