Updated version number to keep parity with core
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@1178985 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slidedeck-admin.css
+++ b/css/slidedeck-admin.css
@@ -4315,6 +4315,21 @@ div.upgrade-button-cta.renewal-state-nearing-expiration .upgrade-button .button-
     padding: 0 25px;
     height: 38px;
 }
+#manage-pro-img
+{
+    border-bottom: solid 1px #dedede !important;
+    padding-bottom: 20px;
+}
+
+a > img 
+{
+    float: left;
+    border: none;
+    padding-right: 5px;
+    padding-bottom: 20px;
+    width: 184px;
+    height: 180px;
+}
 /* End of Additional Sources Upsell */
 
 
